--- a/config/config.env
+++ b/config/config.env
@@ -1,4 +1,4 @@
 NODE_ENV=development
 PORT = 5000
 
-ATLAS_URI=mongodb+srv://admin:admin@cluster0-fhcsh.mongodb.net/test?retryWrites=true&w=majority
+ATLAS_URI={put you cridentials}
