--- a/config/config.env
+++ b/config/config.env
@@ -1,4 +1,8 @@
 NODE_ENV=development
 PORT = 5000
 
-ATLAS_URI=mongodb+srv://admin:admin@cluster0-fhcsh.mongodb.net/test?retryWrites=true&w=majority
+
+MONGO_URI=mongodb+srv://admin:admin@cluster0.fhcsh.mongodb.net/test?retryWrites=true&w=majority
+
+GEOCODER_PROVIDER=mapquest
+GEOCODER_API_KEY=LB5831SoBJowt77doyTBwmu3rnc2FdUG
